argocd/backstage/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backstage
    app.kubernetes.io/instance: backstage-app
    app.kubernetes.io/name: backstage
  name: backstage
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/component: backstage
      app.kubernetes.io/instance: backstage
      app.kubernetes.io/name: backstage
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backstage
        app.kubernetes.io/instance: backstage
        app.kubernetes.io/name: backstage
    spec:
      imagePullSecrets:
        - name: gitea-pull-secrets
      containers:
        - command:
            - node
            - packages/backend
          image: gitea.yanello.net/marcus/backstage:latest@sha256:5b1e4e4debaa3f330a186d0d76d1c4bb5f960dda8dc5cc03daa0ccdcc7dca4a0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /.backstage/health/v1/liveness
              port: 7007
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: backstage-backend
          ports:
            - containerPort: 7007
              name: backend
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /.backstage/health/v1/readiness
              port: 7007
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /.backstage/health/v1/liveness
              port: 7007
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      restartPolicy: Always
      serviceAccount: backstage
      serviceAccountName: backstage
